[package]
name = "covid_stats"
version = "0.1.0"
authors = ["Jack Wright"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["rustls-tls"] }
tokio = { version = "0.2", features = ["full"] }
bytes = "0.5"


[dev-dependencies]
tempfile = "3.1"